--- a/e-commerce_campos_sergio/style.css
+++ b/e-commerce_campos_sergio/style.css
@@ -50,6 +50,9 @@ footer {
     background-color: #218838;
 }
 
+.col-md-3 {
+    padding: 15px;
+}
 h1 {
     font-size: 2.5rem;
     margin-bottom: 20px;
